# ai

./: README.md  build.sh  pyproject.toml  update_version.py
jayhack/ai/: supported_emojis.md
src/: ai.py  config.py  message.py  model.py  types.py
src/ai/: __init__.py  ai.py  app_id.py  core.py  get_env.py
src/ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ai/channels/: airtable.py  api_client_wrapper.py  channel.py  create_channel.py  gh.py  github.py  notion.py  slack.py  twitter.py
src/ai/utils/: api_interface.py  channel.py  config.py  custom_types.py  message.py  model.py
src/channels/: slack.py
src/utils/: model.py
